# ChangeLog for net-misc/icecast
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/ChangeLog,v 1.92 2012/08/26 14:12:48 armin76 Exp $

  26 Aug 2012; Raúl Porcel <armin76@gentoo.org> icecast-2.3.2.ebuild,
  icecast-2.3.3.ebuild:
  Drop alpha/sparc keywords

  09 Aug 2012; Markos Chandras <hwoarang@gentoo.org> icecast-2.3.3.ebuild:
  Stable on amd64 wrt bug #394847

  09 Aug 2012; Brent Baude <ranger@gentoo.org> icecast-2.3.3.ebuild:
  Marking icecast-2.3.3 ppc for bug 394847

  09 Aug 2012; Andreas Schuerch <nativemad@gentoo.org> icecast-2.3.3.ebuild:
  x86 stable, see bug 394847

  08 Aug 2012; Markos Chandras <hwoarang@gentoo.org>
  +files/icecast-2.3.3-fix-xiph_openssl.patch, icecast-2.3.3.ebuild:
  Fix m4 rule for openssl detection. Bug #430434

  07 Aug 2012; Markos Chandras <hwoarang@gentoo.org>
  +files/icecast-2.3.3-libkate.patch, icecast-2.3.3.ebuild, metadata.xml:
  Make libkate support optional. Bug #368539

*icecast-2.3.3 (06 Aug 2012)

  06 Aug 2012; Markos Chandras <hwoarang@gentoo.org> +icecast-2.3.3.ebuild,
  metadata.xml:
  Version bump. Eapi4fy it. Take exclusive maintainership

  21 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> icecast-2.3.2.ebuild:
  Touch access.log and error.log and chown them to icecast:nogroup wrt
  #245727, thanks to Christopher Schwan for reporting.

  19 Dec 2008; Peter Volkov <pva@gentoo.org> icecast-2.3.2.ebuild:
  Removed || die after enewuser, bug #237290

  14 Nov 2008; Raúl Porcel <armin76@gentoo.org> icecast-2.3.2.ebuild:
  alpha stable wrt #245717

  12 Nov 2008; Brent Baude <ranger@gentoo.org> icecast-2.3.2.ebuild:
  stable ppc64, bug 245717

  08 Nov 2008; Markus Meier <maekke@gentoo.org> icecast-2.3.2.ebuild:
  amd64/x86 stable, bug #245717

  08 Nov 2008; nixnut <nixnut@gentoo.org> icecast-2.3.2.ebuild:
  Stable on ppc wrt bug 245717

  05 Nov 2008; Ferris McCormick <fmccor@gentoo.org> icecast-2.3.2.ebuild: