@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX icecast-2.3.3-fix-xiph_openssl.patch 648 SHA256 5804664e9add19dd679056b7ea07f19aa63205c7e5b84b2bc858c420e9688c57 SHA512 fa4014a3aad9886b14f6551cf72c8ae8d97b6879302fc11e8a7b120464540c077786a3209e5f87316393362a9e00d759686c9a3448dd00ec0503e025d28301f2 WHIRLPOOL 2b1e52069b970ecd2091236287c09034741959d61b9a18dcb66fc7059817367e5cabea7334d3887f432b4a26a578225cfb240ff68cdaa5c03ea35bfb2dd9077e
 AUX icecast-2.3.3-libkate.patch 1175 SHA256 880cef8feed886933eae495f547d10b3f9462a87f0812718bca6f454f25ecc40 SHA512 4ecacacb422ceb71bb6f8857228b2c00e2564d6926124aa8e9430b0f1466df934146fcbbc67194a6e644f6c4c16421474016909c385ec2271967730f80f5b8b3 WHIRLPOOL 0a2bea3dc404a61663b606bb14e862a3e2a985519133d80919406a7e4c86dddb3d2bb25e2af044cc02fd5d0528dcf7889e66b30dc5c05a3068cd3ab0af7b98d0
@@ -8,13 +8,23 @@ AUX init.d.icecast 357 SHA256 bffdb754a923d12fd619b022b94398b609b940214ef012ed8e
 DIST icecast-2.3.2.tar.gz 1152319 SHA256 4742b38fc55b6373895a7c0a35baed49a848fec99f5e8538e3f0157383d0b3f0 SHA512 c971b1ead32e76e493d95de34297084a6c09d6ade1aa3836c36e58290aec294e57b2729c0f9e2765bd3d7a0d728761b7f5174e8abddb72375a8b24f7df45db34 WHIRLPOOL af33bc0c4555c868acaa0c764b2fcb98672fedaa9fbf4adea06392a059c8935df23cd1c07a680bb158f0cd7046a73c35b2ae9197bea1cd7545f4337eaf457357
 DIST icecast-2.3.3.tar.gz 1161774 SHA256 1b1d06f5f83c9a983cd28cc78aa90e4038f933511b3d20d7fd2cfc116645c36d SHA512 e0ae26047744bfcb902dd5418bb83a6e25956109bd410f244fb23dd21216d2d0456c29684c38db99cfa6c5496353a860be776f569964b98286f0deca78156aba WHIRLPOOL 7042eb5f86f03b613e56c9a2362738cde9cf8bb6addfdc36a53b5a476c12edfbf6ff83612de4acba0cec7c62f7b26cf06a7f0b55cde67d81f9dd2a12fa6a8af8
 EBUILD icecast-2.3.2.ebuild 1841 SHA256 3453f7ddf96e1b82385b242cae0e4fdbbf89a5226904244297e97f6133125f50 SHA512 3e595ff7ccdc61cfd511a33add2e6a862ccc3bebc8833eb04fcd54263c3dc061d51ec9106b24c04fed7fd2a2738cbb56c6242cd861484d0d6eeb3412065f7e83 WHIRLPOOL 41256dd41e5328fe4ee7e709e9dc823950cabd9ca88e5b98b28e620c91e69d162c8a59c5f4a0e8e8dc736557d715acf520b94e3e09e1c22d622183a103f8c974
-EBUILD icecast-2.3.3.ebuild 1937 SHA256 1922bc7a4a8a29a51ef71d610f7d5958728dd7fd2eb6555a9ac550ba1af5c035 SHA512 15da33e8a026b8ed9c1a24024c33a4b5f46a27dcd375fd786bdc0f823ca6a78c3e11f63a8db8e32dc0b75f7706f7aba30e1610c088b72316483bf80df1d57dfa WHIRLPOOL b57d97c137c1a6f5548d5d37a2abc2ed5837dd638cb279197a5910bf3087373e6da87fe24f7d406097296b9b98d1b634c94ddbbf1063b708d3b16faca1a15f81
-MISC ChangeLog 13122 SHA256 17122a6ed93ef10471ae7cd65d36cab3c1767f10428da6eebbc0b7387847c472 SHA512 3341b10fc7cfa7c942121f5a78209a9cfe00e706ac530c697a974f9f3a9b2f3b8278aaacf45a29ff590279e172660bbf5d7caaebdfe2c6feff91aae07552e19f WHIRLPOOL 5edfd5e1ae5ca4ea8111a430aa330600e010329ae7d8080edd886d3624b99f23e552862c88e442a71a00bbf141704e8315fde64f8c3d89a7f1d7899418a740df
+EBUILD icecast-2.3.3.ebuild 1964 SHA256 fa318be5ace0df29661e42e7384da60af23dd87da22992d8f8e40eae74b3e2ad SHA512 80dd14fdf0ad8f88d7d5caeb33d7f1aec2a0d18c4cc7677d55dbea011cc6e2bb1d1fe2161440c94d6d742e47ce5441a15426bd0b9d15ba30ca0af74f6c3377f4 WHIRLPOOL 940c889bde36c3cf55989148e8a54b8f22183ecb4c73e297253b27fda9f18a74bbaec4a893ac9ff15f909222a39a1e4495922b062a4d4c0dc1a5187d69b69380
+MISC ChangeLog 13288 SHA256 e95d9d4ec0d480f873c935a36b3d15b8d4155e8f0f070308b862463d7dd78a0e SHA512 a865f65f0bfa7efeb479677d9c20476c201966bd9c7ffdc0413d2c37ca87ff777904fb283858f10d4afcf9a1dd980e50d7acc0ab53c573a58a9dbc78f39e96c3 WHIRLPOOL a1ea257758284304a52bf3706ae779baec7d3a0cca94528ed12c30c7cab9d0c54a0005823565e513a24107f3deea953054cfe59a400cd34f8b3927e8157f699b
 MISC metadata.xml 437 SHA256 c644bb366bc4f4b3faa2390526516ce133d780f5781e7058be2284720dcdf9e3 SHA512 ed7862fc62ba469ad909a72bd03f56b513b97c792c016ca3d0bfbee72b5c983baf59a3b443eb9866dc7f674a05e9d3e9ed29425a8d41f8fc4f7c001b946d88ec WHIRLPOOL a00e9154160f5c2305ecbf7adb51d982968cedd4a07d71042a9a4fe9a0dfa12035ed664e46c62999edbbae530aad6fc12c71b4f0dc8aeacf528ceee530fe46db
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAlA6LuYACgkQuQc30/atMkBB3wCgmWyFbkAOTSzz6BarC013MjTm
-wJ0An3bYjpSb7E8WROCDs0ocLLwI1kHs
-=Ya+Q
+iQIcBAEBCAAGBQJQWEhkAAoJEF0huFKJUZL5W8YP/iEhI4WamN2Bx9ff9il4anzS
+nrslGImJ+CcXUYpJHyaqVDSiQvSgMwQWfS6VInJoV2dCXhHVNaQo6eZB1ZUcQ4JJ
+OCDORQ3Zp7Jni7uzHib0qZTdAAidiwmWlZPzVxYFia1hjhG8Wq7UHzHQg/6jpq1W
+pvb+sFd27r9Serv+aQhJu2EiRJ01I64Jj67qTtfFVK6I26R/q5eE9JTugiIO5Xfg
+zVAdSySD/HWwmswcXLGMp67lH8jaQvflRdMhdgi/1+fK03aNPq3bwWXL5cZ1yiuf
+Zfta2tQCw9G4Vkuud7uKVANqVKmBL+mT+I++rUCXyRd0QcJCzOYpnc7c9pRcn+Az
+J+Zb4kfR0CJ0KxOw/zOOXpey0HK/p/f/F/uUR2O82Rr+Bfla7SwM4NyZhG/utLdy
+pEOCPNmq91wZiNnpoE2bMLebH2gkDsKsps7TpMpg4W12E2PXlniyrDPvUCDf7+KD
+9PClBZHlUYE5b4r7Sy4o0kDwEYpyq5lrzd7eSvi5SkqTypl6Moemr1Q3yzF6RD0o
+E7KL0V7SKf2ZNMMzb7DYH+3BL1O1RpmiYhDtPYPIBYAdWAO1bSagliBxtRKRQgMB
+PFY6ScCCaR/2EmLFcb8n5s7EHWXlozMii7k2TpqUafNEoxlMiRs0V3b2ktCARVno
+uNUm9KrYY1fKVQEm9ZtJ
+=Ibr6
 -----END PGP SIGNATURE-----
