@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/icecast
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/ChangeLog,v 1.92 2012/08/26 14:12:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/ChangeLog,v 1.93 2012/09/18 10:09:10 xarthisius Exp $
+
+  18 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> icecast-2.3.3.ebuild:
+  ppc64 stable wrt #394847, add missing inherit of user.eclass and explicit
+  RDEPEND
 
   26 Aug 2012; Raúl Porcel <armin76@gentoo.org> icecast-2.3.2.ebuild,
   icecast-2.3.3.ebuild:
